# PADP

./: .gitignore
PADP/: Makefile  README.md  pyproject.toml  requirements.txt
PADP/docs/: README.md
PADP/src/components/: __init__.py
PADP/src/designs/: __init__.py
openspec/: project.md
